tests/ui/pattern/usefulness/issue-40221.stderr
error[E0004]: non-exhaustive patterns: `P::C(PC::QA)` not covered
  --> $DIR/issue-40221.rs:11:11
   |
LL |     match proto {
   |           ^^^^^ pattern `P::C(PC::QA)` not covered
   |
note: `P` defined here
  --> $DIR/issue-40221.rs:2:5
   |
LL | enum P {
   |      -
LL |     C(PC),
   |     ^ not covered
   = note: the matched value is of type `P`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         P::C(PC::Q) => (),
LL ~         P::C(PC::QA) => todo!(),
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
